--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </div>
                   </div>
                   <p class="text-muted">
-                    Daten sind das Gold des 21. Jahrhunderts. Machen Sie ihre ersten Schritte in der Welt von Data Science und Big Data mit dieser kurzen Einführung in R, die Programmiersprache für Data Analytics.
+                    Jedes datengestützte Projekt beginnt hier. Lernen Sie wie Sie Daten aus verschiedenen Quellen bereinigen und verknüpfen können und wie Sie die darin enthaltenen Zusammenhänge anschliessend ansprechend visualisieren können.
                 </p>
                 </div>
                 </a>
