--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     </div>
                   </div>
                   <p class="text-muted">
-                    Jedes datengestützte Projekt beginnt hier. Lernen Sie wie Sie Daten aus verschiedenen Quellen bereinigen und verknüpfen können und wie Sie die darin enthaltenen Zusammenhänge anschliessend ansprechend visualisieren können.
+                    Jedes datengestützte Projekt beginnt hier. Lernen Sie wie Sie Daten aus verschiedenen Quellen bereinigen und verknüpfen können und wie Sie die darin enthaltenen Zusammenhänge ästhetisch ansprechend visualisieren können.
                 </p>
                 </div>
                 </a>
