--- a/index.html
+++ b/index.html
@@ -932,7 +932,7 @@
                 <!-- Project Details Go Here -->
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
-                <p class="item-intro text-muted">Lerne Data Science mit R von Grund auf</p>
+                <p class="item-intro text-muted">Exploriere und visualisiere Daten mit R</p>
                 <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>
                 <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>--->
                 <br><br>
