--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
             </span>
           </a>
-          <h4 class="service-heading">Consulting</h4>
+          <h4 class="service-heading">Beratung</h4>
           <p class="text-muted">Haben Sie ein Data Science Problem? Wir können helfen! Senden Sie uns eine <a class="js-scroll-trigger" href="#contact"><b>Nachricht</b></a> und wir melden uns umgehend bei Ihnen.</p>
         </div>
         <div class="col-md-4">
