--- a/index.html
+++ b/index.html
@@ -1293,116 +1293,128 @@
                   </tr>
                 </table>
 
-    <!-- RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR -->
-    <div class="course-modal modal fade" id="MLwR" tabindex="-1" role="dialog" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="close-modal" data-dismiss="modal">
-            <div class="lr">
-              <div class="rl"></div>
-            </div>
-          </div>
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8 mx-auto">
-                <div class="modal-body">
-                  <!-- Project Details Go Here -->
-                  <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
-                  <h4  style="padding:0px;margin:0px">Reporting mit R</h4>
-                  <p class="item-intro text-muted">Lernen Sie dynamische, interaktive Berichte mit R zu erstellen.</p>
-
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-283873#collapsible-heading-anmeldung">DE | Jun 5/6 | Anmelden</a>
-                  <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>--->
-
-                  <br><br>
-
-                  <p class="head">Beschreibung</p>
-                  <p class="text-muted entry">Eine der wichtigsten Aufgaben bei datengestützten Projekten ist die Kommunikation der Ergebnisse. Dabei kann es sich um Berichte, Präsentationen, oder interaktive Dashboards handeln. Die Programmiersprache R und R Studio gehören für diese Zwecke zu den besten verfügbaren Tools. In diesem intensiven Zweitageskurs lernen Sie, wie Sie mit Hilfe von RMarkdown dynamische Berichte und Folien ganz einfach in unterschiedlichen Formaten wie .pdf, .docx oder .pptx erstellen und gestalten können. Dabei lernen Sie Analysen, Visualisierungen und Text in einem einzigen, beliebig reproduzierbaren Dokument zu erstellen. Ausserdem lernen Sie interaktive Dashboards mit Shiny erstellen können, damit Sie Daten und Abbildungen einfach explorieren und zur Exploration zur Verfügung stellen können.</p>
-
-                  <p class="head">Voraussetzungen</p>
-                  <p class="text-muted entry">Teilnehmende dieses Kurses sollten über Grundkenntnisse in der Programmiersprache R verfügen. Für Interessierte ohne oder mit unzureichender Erfahrung in R empfehlen wir die Kurse Einführung in die moderne Datenanalyse mit R,  oder Explorative Datenanalyse mit R zu besuchen. Wenn Sie nicht sicher sind, ob Sie über genügend Grundkenntnisse verfügen setzen Sie sich entweder direkt mit uns in Verbindung oder nehmen Sie zunächst am diesem <a href="http://bit.ly/weissichgenug%C3%BCberR"><b>QUIZ</b></a> (bitly.com/weissichgenugüberR) teil. Teilnehmende sind gebeten, einen eigenen Laptop mit Software-Installationsrechten mitzubringen. </p>
-
-                  <p class="head">Details</p>
-                  <table class="text-muted entry" cellspacing="0" cellpadding="0">
-                    <tr>
-                      <td class="elem">Kurssprache</td>
-                      <td>Deutsch</td>
-                    </tr>
-                    <tr>
-                      <td class="elem">Zeiten</td>
-                      <td>Zweitageskurs: Fr-Sa, 09.00-18.00 Uhr</td>
-                    </tr>
-                    <tr>
-                      <td class="elem">Ort</td>
-                      <td><a href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
-                    </tr>
-                    <tr>
-                      <td class="elem">Gruppengrösse</td>
-                      <td>Max. 18 Teilnehmende</td>
-                    </tr>
-                    <tr>
-                      <td class="elem">Preis</td>
-                      <td>990.- CHF</td>
-                    </tr>
-                  </table>
-
-                  <p class="head">Aufbau</p>
-                  <p class="text-muted entry">Der Kurs findet an zwei Tagen jeweils von 9:00 bis 18:00 Uhr statt. An beiden Tagen dienen Kurzvorträge und Beispiele zur Einführung in die einzelnen Themen. Der Grossteil der Zeit wird anschliessend praktischen Übungen gewidmet, die Ihnen "learning by doing" ermöglichen sollen. Mit mindestens 2 Anleitern vor Ort wird es ausreichend Zeit für eine 1:1 Betreuung während der Übungen geben. Alle Kursmaterialien, Tutorials, Beispiele, Übungen und Lösungen stehen Ihnen während und nach dem Kurs jederzeit online zur Verfügung. Sie finden unsere Materialien zu vergangenen Kursen auf <a href="https://therbootcamp.github.io/#materials">offene Materialien erkunden</a>. </p>
-
-                  <p class="head">Programm & Materialien <font style="font-size:12px"> (Feb, 2020, Änderungen vorbehalten)</font></p>
-                  <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
-                    <tr>
-                      <th></th>
-                      <th>Tag 1</th>
-                      <th>Tag 2</th>
-                    </tr>
-                    <tr>
-                      <td class="time">0900</td>
-                      <td><a href="">Willkommen</a></td>
-                      <td><a href="">Rückblick</a></td>
-                    </tr>
-                    <tr>
-                      <td class="time">0930</td>
-                      <td><a href="">Dynamisches Reporting</a></td>
-                      <td><a href="">Markdown zu Office Dateien</a></td>
-                    </tr>
-                    <tr>
-                      <td class="time">1200</td>
-                      <td>Lunch</td>
-                      <td>Lunch</td>
-                    </tr>
-                    <tr>
-                      <td class="time">1300</td>
-                      <td><a href="">Reports mit Markdown I</a></td>
-                      <td><a href="">Dashboards mit Shiny</a></td>
-                    </tr>
-                    <tr>
-                      <td class="time">1530</td>
-                      <td><a href="">Reports mit Markdown II</a></a></td>
-                      <td><a href="">Dashboards mit Shiny</a>></td>
-                    </tr>
-                    <tr>
-                      <td class="time">1745</td>
-                      <td>Wrap-up</td>
-                      <td>Apero</td>
-                    </tr>
-                  </table>
-
-                  <p class="head">Wichtige Pakete</p>
-                  <table class="text-muted entry" cellspacing="0" cellpadding="0">
-                    <tr>
-                      <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=rmarkdown">rmarkdown</a></td>
-                      <td>Paket zur Erstellung reproduzierbarer Berichte im .html, .doc, .ppt oder .pdf Format.</td>
-                    </tr>
-                    <tr>
-                      <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=shiny">shiny</a></td>
-                      <td>Paket zur erstellung interaktiver Dashboards.</td>
-                    </tr>
-                  </table>
 
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Schliessen</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR RwR -->
+  <div class="course-modal modal fade" id="RwR" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/4.png" alt="">
+                <h4  style="padding:0px;margin:0px">Reporting mit R</h4>
+                <p class="item-intro text-muted">Lernen Sie dynamische, interaktive Berichte mit R zu erstellen.</p>
+
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-283873#collapsible-heading-anmeldung">DE | Jun 5/6 | Anmelden</a>
+                <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>--->
+
+                <br><br>
+
+                <p class="head">Beschreibung</p>
+                <p class="text-muted entry">Eine der wichtigsten Aufgaben bei datengestützten Projekten ist die Kommunikation der Ergebnisse. Dabei kann es sich um Berichte, Präsentationen, oder interaktive Dashboards handeln. Die Programmiersprache R und R Studio gehören für diese Zwecke zu den besten verfügbaren Tools. In diesem intensiven Zweitageskurs lernen Sie, wie Sie mit Hilfe von RMarkdown dynamische Berichte und Folien ganz einfach in unterschiedlichen Formaten wie .pdf, .docx oder .pptx erstellen und gestalten können. Dabei lernen Sie Analysen, Visualisierungen und Text in einem einzigen, beliebig reproduzierbaren Dokument zu erstellen. Ausserdem lernen Sie interaktive Dashboards mit Shiny erstellen können, damit Sie Daten und Abbildungen einfach explorieren und zur Exploration zur Verfügung stellen können.</p>
+
+                <p class="head">Voraussetzungen</p>
+                <p class="text-muted entry">Teilnehmende dieses Kurses sollten über Grundkenntnisse in der Programmiersprache R verfügen. Für Interessierte ohne oder mit unzureichender Erfahrung in R empfehlen wir die Kurse Einführung in die moderne Datenanalyse mit R,  oder Explorative Datenanalyse mit R zu besuchen. Wenn Sie nicht sicher sind, ob Sie über genügend Grundkenntnisse verfügen setzen Sie sich entweder direkt mit uns in Verbindung oder nehmen Sie zunächst am diesem <a href="http://bit.ly/weissichgenug%C3%BCberR"><b>QUIZ</b></a> (bitly.com/weissichgenugüberR) teil. Teilnehmende sind gebeten, einen eigenen Laptop mit Software-Installationsrechten mitzubringen. </p>
+
+                <p class="head">Details</p>
+                <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem">Kurssprache</td>
+                    <td>Deutsch</td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Zeiten</td>
+                    <td>Zweitageskurs: Fr-Sa, 09.00-18.00 Uhr</td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Ort</td>
+                    <td><a href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Gruppengrösse</td>
+                    <td>Max. 18 Teilnehmende</td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Preis</td>
+                    <td>990.- CHF</td>
+                  </tr>
+                </table>
+
+                <p class="head">Aufbau</p>
+                <p class="text-muted entry">Der Kurs findet an zwei Tagen jeweils von 9:00 bis 18:00 Uhr statt. An beiden Tagen dienen Kurzvorträge und Beispiele zur Einführung in die einzelnen Themen. Der Grossteil der Zeit wird anschliessend praktischen Übungen gewidmet, die Ihnen "learning by doing" ermöglichen sollen. Mit mindestens 2 Anleitern vor Ort wird es ausreichend Zeit für eine 1:1 Betreuung während der Übungen geben. Alle Kursmaterialien, Tutorials, Beispiele, Übungen und Lösungen stehen Ihnen während und nach dem Kurs jederzeit online zur Verfügung. Sie finden unsere Materialien zu vergangenen Kursen auf <a href="https://therbootcamp.github.io/#materials">offene Materialien erkunden</a>. </p>
+
+                <p class="head">Programm & Materialien <font style="font-size:12px"> (Feb, 2020, Änderungen vorbehalten)</font></p>
+                <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <th></th>
+                    <th>Tag 1</th>
+                    <th>Tag 2</th>
+                  </tr>
+                  <tr>
+                    <td class="time">0900</td>
+                    <td><a href="">Willkommen</a></td>
+                    <td><a href="">Rückblick</a></td>
+                  </tr>
+                  <tr>
+                    <td class="time">0930</td>
+                    <td><a href="">Dynamisches Reporting</a></td>
+                    <td><a href="">Markdown zu Office Dateien</a></td>
+                  </tr>
+                  <tr>
+                    <td class="time">1200</td>
+                    <td>Lunch</td>
+                    <td>Lunch</td>
+                  </tr>
+                  <tr>
+                    <td class="time">1300</td>
+                    <td><a href="">Reports mit Markdown I</a></td>
+                    <td><a href="">Dashboards mit Shiny</a></td>
+                  </tr>
+                  <tr>
+                    <td class="time">1530</td>
+                    <td><a href="">Reports mit Markdown II</a></a></td>
+                    <td><a href="">Dashboards mit Shiny</a>></td>
+                  </tr>
+                  <tr>
+                    <td class="time">1745</td>
+                    <td>Wrap-up</td>
+                    <td>Apero</td>
+                  </tr>
+                </table>
+
+                <p class="head">Wichtige Pakete</p>
+                <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=rmarkdown">rmarkdown</a></td>
+                    <td>Paket zur Erstellung reproduzierbarer Berichte im .html, .doc, .ppt oder .pdf Format.</td>
+                  </tr>
+                  <tr>
+                    <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=shiny">shiny</a></td>
+                    <td>Paket zur erstellung interaktiver Dashboards.</td>
+                  </tr>
+                </table>
+
+              <button class="btn btn-primary" data-dismiss="modal" type="button">
+                <i class="fas fa-times"></i>
+                Schliessen</button>
               </div>
             </div>
           </div>
