--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             </li>
             <li>
               <div class="timeline-image">
-                <a data-toggle="modal" href="#Erweitert">
+                <a data-toggle="modal" href="#RwR">
                   <img class="rounded-circle img-fluid" src="img/courses/4.png" alt="">
                 </a>
               </div>
