--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                   <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">990CHF @ Uni Basel</p>
                 </div>
                 <div class="timeline-body">
-                  <a class="course-link" data-toggle="modal" href="#R4DS">
+                  <a class="course-link" data-toggle="modal" href="#RwR">
                   <div class="course-hover">
                     <div class="course-hover-content">
                       <i class="fas fa-plus fa-3x"></i>
