--- a/index.html
+++ b/index.html
@@ -863,7 +863,8 @@
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
-                    <td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
+                    <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
+                    <td>Basel - Veranstaltungsort tba</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
@@ -981,7 +982,8 @@
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
-                    <td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
+                    <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
+                    <td>Basel - Veranstaltungsort tba</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
@@ -1103,7 +1105,8 @@
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
-                    <td><a href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
+                    <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
+                    <td>Basel - Veranstaltungsort tba</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
@@ -1231,7 +1234,8 @@
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
-                    <td><a href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
+                    <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
+                    <td>Basel - Veranstaltungsort tba</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
@@ -1346,7 +1350,8 @@
                   </tr>
                   <tr>
                     <td class="elem">Ort</td>
-                    <td><a href="https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-283873">Advanced Studies</a> - Universität Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>
+                    <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
+                    <td>Basel - Veranstaltungsort tba</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
@@ -1748,6 +1753,7 @@
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalytic mit R</p>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">November 2019 | 2-day</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Feb/">Februar 2020 | 2-day</a><br>
 
                 <br><br><br>
 
