--- a/index.html
+++ b/index.html
@@ -1396,7 +1396,7 @@
                   <tr>
                     <td class="time">1530</td>
                     <td><a href="">Reports mit Markdown II</a></a></td>
-                    <td><a href="">Dashboards mit Shiny</a>></td>
+                    <td><a href="">Dashboards mit Shiny II</a></td>
                   </tr>
                   <tr>
                     <td class="time">1745</td>
