--- a/index.html
+++ b/index.html
@@ -368,6 +368,10 @@
                 <p class="section-subheading text-muted">"Lernen R im The R Bootcamp hat mir das Gefühl gegeben [...], in der sich wandelnden Finanzindustrie relevant zu bleiben."</p>
                 <br><p class="text-muted"><b>IRENA</b>, Credit Officer</p>
             </div>
+            <div class="carousel-item">
+                <p class="section-subheading text-muted">"Ich hatte keine Programmiererfahrung und mit R Bootcamp (nach nur einem halbem Tag!) wurde R auf eine lockere und bequeme Art für mich zugänglich gemacht. Ich freue mich auf die nächsten Schritte mit R und R Bootcamp."</p>
+                <br><p class="text-muted"><b>SARAH</b>, Wissenschaftliche Mitarbeiterin, Pharma</p>
+            </div>
         </div>
 
         <a class="carousel-control-prev" href="#myCarousel" data-slide="prev">
