--- a/index.html
+++ b/index.html
@@ -341,6 +341,7 @@
             <li data-target="#myCarousel" data-slide-to="3" style="background-color:#6c757d"></li>
             <li data-target="#myCarousel" data-slide-to="4" style="background-color:#6c757d"></li>
             <li data-target="#myCarousel" data-slide-to="5" style="background-color:#6c757d"></li>
+            <li data-target="#myCarousel" data-slide-to="6" style="background-color:#6c757d"></li>
         </ol>
         <div class="carousel-inner col-lg-12 text-center" style="padding-bottom:100px;font-size:1em">
            <h2 class="section-heading text-uppercase" style="margin-bottom:40px">Was Teilnehmer sagen</h2>
