--- a/index.html
+++ b/index.html
@@ -1757,14 +1757,15 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">November 2019 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Feb/">Februar 2020 | 2-day</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2019Nov/">November 2019 | 2-day</a><br>
 
                 <br><br><br>
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
-                <h4  style="padding:0px;margin:0px">R for Data Science</h4>
-                <p class="item-intro text-muted" style="margin-bottom:20px"> Learn Data Science with R from the ground up</p>
+                <h4  style="padding:0px;margin:0px">Explorative Datenanalyse</h4>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit Rp</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/BaselRBootcamp_2018July">July 2018 | 4-day</a><br>
@@ -1774,7 +1775,7 @@
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">Statistics with R</h4>
-                <p class="item-intro text-muted" style="margin-bottom:20px">Learn to make data-driven decisions with R</p>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
 
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SwR_2019Apr/">April 2019 | 2-day</a><br>
 
@@ -1782,7 +1783,7 @@
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/3.png" alt="">
                 <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
-                <p class="item-intro text-muted" style="margin-bottom:20px">Learn to build predictive algorithms with R</p>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Lerne mit R prädiktive Algorithmen zu erstellen</p>
 
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019Oct/">October 2019 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/ML_2019May/">May 2019 | 2-day</a><br>
