--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Feb 7 | Anmelden</a><br>
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Feb 7 | Anmelden</a><br>--->
                   <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 11. März voranmelden.">DE | Mär 11 | Voranmelden</a><br>
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>--->
                 </div>
@@ -224,8 +224,8 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>
-                  <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>--->
+                  <!---<a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>--->
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | tba | Voranmelden</a>
                 </div>
               </div>
             </li>
@@ -849,7 +849,7 @@
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science von Grund auf</p>
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Anmelden</a><br>--->
-                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Feb 7 | Anmelden</a><br>
+                <!---<a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Feb 7 | Anmelden</a><br>--->
                 <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 11. März voranmelden.">DE | Mar 11 | Voranmelden</a>
                 <br><br>
                 <p class="head">Beschreibung</p>
@@ -968,8 +968,8 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Exploriere und visualisiere Daten mit R</p>
-                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>
-                <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | Feb 14/15 | Voranmelden</a>--->
+                <!---<a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-272006#collapsible-heading-anmeldung">DE | Feb 14/15 | Anmelden</a>--->
+                <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden.">DE | tba | Voranmelden</a>
                 <br><br>
                 <p class="head">Beschreibung</p>
                 <p class="text-muted entry">Jedes datengestützte Projekt beginnt mit der Datenaufbereitung und -exploration. Von diesem ebenso aufwendigen wie bedeutendem Projektabschnitt hängt alles Folgende ab. Er umfasst das Bereinigen und Verknüpfen von Datensätzen aus verschiedenen Quellen und die Visualisierung der darin enthaltenen Zusammenhänge. Kaum ein Werkzeug eignet sich für diese Aufgaben so gut wie die Programmiersprache R. An diesem vollgepackten Wochenende lernen Sie, wie Sie alle Elemente der Datenaufbereitung und -exploration mit R durchführen können. Sie lernen, wie Sie Daten von der Festplatte oder aus dem Internet laden, wie sie Daten bereinigen und organisieren, wie sie einfache deskriptive Analysen durchführen und, nicht zuletzt, wie Sie ästhetisch ansprechende, publikationsreife Visualisierungen erstellen.</p>
