--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
                     </div>
                   </div>
                   <p class="text-muted">
-                    Resultate datengestützter Projekte müssen normalerweise intern oder nach aussen kommuniziert werden. Lernen Sie mit R reproduzierbare Berichte, Slides und interaktive Shiny dashboards Ihrer Resultate zu erstellen.
+                    Resultate datengestützter Projekte müssen intern oder nach aussen kommuniziert werden. Lernen Sie mit R reproduzierbare Berichte, Slides und interaktive Shiny dashboards Ihrer Resultate zu erstellen.
                 </p>
                 </div>
                 </a>
