--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 </div>
                 </a>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Mar 11 | Anmelden</a><br>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Mär 11 | Anmelden</a><br>
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 11. März voranmelden.">DE | Mär 11 | Voranmelden</a><br>--->
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 7. Februar  voranmelden.">DE | Feb 7 | Voranmelden</a>--->
                 </div>
@@ -848,7 +848,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted">Lerne Data Science von Grund auf</p>
-                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Mar 11 | Anmelden</a><br>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Mär 11 | Anmelden</a><br>
                 <!---<a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-272005#collapsible-heading-anmeldung">DE | Feb 7 | Anmelden</a><br>--->
                 <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Einführung in die moderne Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' am 11. März voranmelden.">DE | Mar 11 | Voranmelden</a>--->
                 <br><br>
