--- a/index.html
+++ b/index.html
@@ -1764,7 +1764,7 @@
 
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse</h4>
-                <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit Rp</p>
+                <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit R</p>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/R4DS_2019Feb/">February 2019 | 2-day</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/Intro2DataScience_2018Oct/">October 2018 | 2-day</a><br>
