--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">_____WEBINAR_____<br>DE | May 8/9 | Anmelden</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">______WEBINAR______<br>DE | May 8/9 | Anmelden</a>
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 20/21 | Voranmelden</a>--->
                 </div>
               </div>
