--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung"><p style="border-bottom: 1px solid black;">WEBINAR</p><br>DE | May 8/9 | Anmelden</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">DE | May 8/9 | Anmelden<p style="border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px">Online Kurs</p></a>
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 20/21 | Voranmelden</a>--->
                 </div>
               </div>
@@ -277,7 +277,7 @@
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung">~ WEBINAR ~<br>DE | Apr 3/4 | Anmelden</a>
+                  <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung">DE | Apr 3/4 | Anmelden<p style="border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px">Online Kurs</p></a>
                   <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>--->
                 </div>
               </div>
@@ -1087,7 +1087,7 @@
                 <h4  style="padding:0px;margin:0px">Statistik mit R</h4>
                 <p class="item-intro text-muted">Treffen Sie datenbasierte Entscheidungen mit R</p>
 
-                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">DE | Mär 20/21 | Anmelden</a>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-233189#collapsible-heading-anmeldung">DE | Mai 8/9 | Anmelden<p style="border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px">Online Kurs</p></a>
                 <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Statistik mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden.">DE | Mär 20/21 | Voranmelden</a>--->
 
                 <br><br>
@@ -1111,7 +1111,7 @@
                   <tr>
                     <td class="elem">Ort</td>
                     <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
-                    <td>Basel - Veranstaltungsort tba</td>
+                    <td>Web-basierter online Kurs</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
@@ -1216,7 +1216,7 @@
                 <h4  style="padding:0px;margin:0px">Maschinelles Lernen mit R</h4>
                 <p class="item-intro text-muted">Lernen Sie prädiktive Algorithmen mit R zu erstellen.</p>
 
-                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung">DE | Apr 3/4 | Anmelden</a>
+                <a class="date" href="https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung">DE | Apr 3/4 | Anmelden<p style="border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px">Online Kurs</p></a>
                 <!---<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Voranmeldug für Maschinelles Lernen mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' voranmelden.">DE | Apr 3/4 | Voranmelden</a>--->
 
                 <br><br>
@@ -1240,7 +1240,7 @@
                   <tr>
                     <td class="elem">Ort</td>
                     <!---<td><a href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287">Advanced Studies</a> - University of Basel <a href="https://www.google.com/maps/place/Advanced+Studies+der+Universit%C3%A4t+Basel/@47.5542123,7.5852195,15z/data=!4m5!3m4!1s0x0:0x1b8cefd9e51f9e3c!8m2!3d47.5542123!4d7.5852195"><i class="fas fa-map-marker-alt"></i></a></td>--->
-                    <td>Basel - Veranstaltungsort tba</td>
+                    <td>Web-basierter online Kurs</td>
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
