--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
     <div class="container">
       <div class="intro-text">
         <div class="intro-lead-in">Lerne Data Science mit R</div>
-        <div class="intro-heading text-uppercase">The R Bootcamp</div>
-        <!---<div class="intro-heading text-uppercase" style='margin-bottom:0px;'>The R Bootcamp<br><a href="https://therbootcamp.github.io/I2R_2020Mar/"><font style="font-size:40%;line-height:50px;color:#EA4B68;vertical-align: text-top;text-transform: lowercase;">...running...</font></a></div>--->
+        <!---<div class="intro-heading text-uppercase">The R Bootcamp</div>--->
+        <div class="intro-heading text-uppercase" style='margin-bottom:0px;'>The R Bootcamp<br><a href="https://therbootcamp.github.io/ML_2020Apr/"><font style="font-size:40%;line-height:50px;color:#EA4B68;vertical-align: text-top;text-transform: lowercase;">...running...</font></a></div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mehr erfahren</a>
       </div>
     </div>
